demo/10-k8s-n-calico-policy/calico.deny-all.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  order: 2000
  selector: "projectcalico.org/namespace in {'dev','uat'}"
  types:
  - Ingress
  - Egress
