demo/10-k8s-n-calico-policy/calico.log-access.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: log-nginx-ingress
  namespace: dev
spec:
  order: 900
  selector: "app == 'nginx'"
  types:
  - Ingress
  ingress:
  - action: Log
    protocol: TCP
    source:
      selector: "app == 'centos'"
    destination: {}
