demo/10-k8s-n-calico-policy/calico.netshoot-to-nginx.yaml
# allow ingress into nginx app within uat namespace
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: uat
spec:
  order: 1000
  selector: "app == 'nginx'"
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source: {}
    destination:
      ports:
      - '80'
---

# allow egress from any pod to nginx app within uat namespace
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-netshoot-egress
  namespace: uat
spec:
  order: 1000
  selector: "projectcalico.org/namespace == 'uat'"
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    source: {}
    destination:
      selector: "app == 'nginx'"
      ports:
      - '80'
