demo/10-k8s-n-calico-policy/k8s.centos-to-nginx.yaml
# allow nginx ingress within dev namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          compliance: open
---

# allow centos egress to nginx app within dev namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-centos-egress
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: centos
  policyTypes:
  - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: nginx
