demo/10-k8s-n-calico-policy/k8s.deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ns1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
